@startuml
'https://plantuml.com/class-diagram

class SyntaxTree {
    -nodes: Graph<ASTNode, Tag>
    &ASTNode get_node(id: usize)
    Vec<& ASTNode> get_children(id: usize)
}

class Function {
    -id: usize
    Vec<Parameter> parameters(...)
}

class Parameter {
    -id: usize
    name: String
}

Function - Parameter

Function --* SyntaxTree
Parameter --* SyntaxTree

@enduml